--- a/page37.html
+++ b/page37.html
@@ -60,7 +60,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="page44.html">Quizzes</a></li><li class="nav-item"><a class="nav-link link" href="Sports.html">Sports</a></li><li class="nav-item"><a class="nav-link link" href="Comedy.html">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives">Archives</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="page44.html">Quizzes</a></li><li class="nav-item"><a class="nav-link link" href="page53.html">Clubs</a></li><li class="nav-item"><a class="nav-link link" href="Comedy.html">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives">Archives</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/l">free html website maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader11 mbr-after-navbar" id="extHeader11-d2" data-rv-view="817" style="background-image: url(assets/images/fotojet-8-1000x667.jpg);">
+<section class="engine"><a href="https://mobirise.ws/j">design own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader11 mbr-after-navbar" id="extHeader11-d2" data-rv-view="817" style="background-image: url(assets/images/fotojet-8-1000x667.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(0, 0, 0);">
     </div>
