--- a/Archives.html
+++ b/Archives.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/g">how to create your own website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="259" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.ws/h">make your own website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="259" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -158,7 +158,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/636215660129678022-2052079369-nice-guys-finish-last-600x6000.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/636215660129678022-2052079369-nice-guys-finish-last-600x6001.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Why Nice Guys Finish Last</h4>
                         <h5 class="card-subtitle"></h5>
